# uni-data-driven-dm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: configs.py  constants.py  dtos.py  graphs.py  logs.py  main.py  utils.py  visualize.py  vos.py
app/analysis/: __init__.py  centrality.py  clustering.py  communities.py  components.py  degree.py  dtos.py  path.py
app/data/: __init__.py  constants.py  source.py
app/maximization/: __init__.py  cascade.py  linear.py  utils.py
data/cache/layout/: LASTFM_ASIA_layout.pkl
scripts/: maximization.py  visualize_graph.py
scripts/analysis/: centrality.py  clustering.py  components.py  degree.py  path.py
scripts/communities/: asyn_lpa.py  louvain.py
scripts/maximization/: cascade.py  linear.py
scripts/reference_models/: ba.py  er.py  louvain.py  ws.py
