[project]
name = "uni-data-driven-dm"
version = "0.1.0"
description = "University 'Data Driven Strategic Decision Making' project"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "structlog>=25.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.10.0",
]

[tool.ruff]
src = ["app"]
target-version = "py312"

select = [
    "A", "ANN", "ARG", "B", "BLE", "C4", "C90", "COM", "D", "E", "F", "FBT", "FIX",
    "FLY", "G", "I", "ICN", "INP", "ISC", "N", "PIE", "PL", "PT", "PTH", "PYI", "Q",
    "RET",  "RSE", "RUF", "S", "SIM", "SLF", "T20", "TD", "TID", "TRY", "UP", "W",
    "YTT"
]
ignore = [
    "ANN101", "ANN102", "COM812", "D100", "D101", "D102", "D103", "D104", "D105",
    "D106", "D107", "D202", "D203", "D213", "D400", "D401", "D413", "D415", "ISC001",
    "PERF", "PLR0913", "TRY002", "TRY003", "TRY300"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "N999"]

[tool.ruff.lint.isort]
known-local-folder = ["app"]
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
ignore-names = ["e", "k", "v"]

[tool.ruff.lint.pydocstyle]
convention = "google"
